--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -8,17 +8,25 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "angular-mocks": "^1.4.5",
+    "angular": "1.4.5",
+    "angular-mocks": "1.4.5",
+    "bower": "^1.5.2",
     "gulp": "^3.9.0",
     "gulp-inject": "^2.2.0",
     "gulp-jasmine": "^2.0.1",
     "gulp-karma": "0.0.4",
     "gulp-load-plugins": "^0.10.0",
-    "jasmine": "^2.3.2",
+    "gulp-sass": "^2.0.4",
+    "jasmine": "2.3.0",
     "jasmine-core": "^2.3.4",
-    "karma": "^0.13.9",
+    "karma": "~0.12.0",
     "karma-chrome-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.6"
+    "karma-cli": "0.1.0",
+    "karma-jasmine": "0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "main-bower-files": "^2.9.0",
+    "phantomjs": "^1.9.18",
+    "wiredep": "^2.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
